# aiida-shell

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
docs/source/: conf.py  examples.md  howto.rst  index.rst  installation.rst
docs/source/_static/: custom.css
docs/source/examples/: gromacs.md  lammps.md  qe.md
docs/source/examples/include/scripts/: gromacs.py  lammps.py  qe.py
src/aiida_shell/: __init__.py  launch.py
src/aiida_shell/calculations/: __init__.py  shell.py
src/aiida_shell/data/: __init__.py  code.py  entry_point.py  pickled.py
src/aiida_shell/engine/: __init__.py
src/aiida_shell/engine/launchers/: __init__.py  shell_job.py
src/aiida_shell/parsers/: __init__.py  shell.py
tests/: conftest.py  test_launch.py  test_version.py
tests/calculations/: __init__.py  test_shell.py
tests/calculations/test_shell/: test_filename_stdin.txt
tests/data/: test_code.py  test_entry_point.py  test_pickled.py
tests/engine/launchers/: test_shell_job.py
tests/parsers/: test_shell.py
